# fancy_grocery_list

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-20-grocery-list-cli.md  2026-02-20-grocery-list-design.md  2026-02-20-recipe-scaling-list-remove-design.md  2026-02-20-recipe-scaling-list-remove.md  2026-02-21-pantry-and-markdown-output-design.md
src/fancy_grocery_list/: __main__.py  cli.py  config.py  fetcher.py  formatter.py  models.py  pantry.py  processor.py  scraper.py  session.py  staples.py
tests/: test_cli.py  test_config.py  test_fetcher.py  test_formatter.py  test_models.py  test_pantry.py  test_processor.py  test_scraper.py  test_session.py  test_staples.py
tests/fixtures/: serious_eats.html
